# nodoface

./: .gitignore  .npmignore  CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json
api/: index.d.ts  nodoface.js
api/types/: CLNF.d.ts  DetectionResult.d.ts  FaceDetectionMTCNN.d.ts  FaceDetectorHOG.d.ts  FaceDetectorHaar.d.ts  FaceDetectorMTCNN.d.ts  FaceModelParameters.d.ts  FloatImage.d.ts  GazeAnalyser.d.ts  Image.d.ts  ImageCapture.d.ts  IntImage.d.ts  OutputUtils.d.ts  SequenceCapture.d.ts  VideoCapture.d.ts  VideoWriter.d.ts  draw.d.ts
examples/: cv_input_output.js  cv_input_output.ts  haar_on_video.js  haar_on_video.ts  hog_on_video.js  hog_on_video.ts  image_capture_example.js  image_capture_example.ts  mtcnn_on_video.js  mtcnn_on_video.ts  sequence_capture_example.js  sequence_capture_example.ts
src/: main.cpp
src/cvtypes/: Mat.cpp  Mat.h  MatFloat.cpp  MatFloat.h  MatImage.h  MatInt.cpp  MatInt.h
src/draw/: cvdraw.cpp  cvdraw.h
src/extras/: napiextra.cpp  napiextra.h  napiextratypes.cpp  napiextratypes.h  ndarray.h
src/extratypes/: napiextratypes.cpp
src/eyegaze/: GazeAnalyser.cpp  GazeAnalyser.h
src/facedetection/: FaceDetectorHOG.cpp  FaceDetectorHOG.h  FaceDetectorHaar.cpp  FaceDetectorHaar.h  FaceDetectorMTCNN.cpp  FaceDetectorMTCNN.h
src/io/: ImageCapture.cpp  ImageCapture.h  OutputUtils.cpp  OutputUtils.h  SequenceCapture.cpp  SequenceCapture.h  (+4 more)
tests/: FaceDetectorHOG.test.ts  FaceDetectorHaar.test.ts  FaceDetectorMTCNN.test.ts  Image.test.ts  ImageCapture.test.ts  SequenceCapture.test.ts  VideoCapture.test.ts
(+8 files in other folders)
